Remove error-prone + nullaway failing build